--- a/styles.css
+++ b/styles.css
@@ -30,10 +30,15 @@ header {
 footer p {
     margin: 0;
 }
+/*About Page*/
 
 #about {
-    background: #f9f9f9; /* Light grey background color */
+    background: #f9f9f9; 
+    padding: 3rem 0;
 }
+#about .text-center {
+    text-align: center;
+ }
 
 #about h2 {
     font-size: 2.5rem;
@@ -43,22 +48,26 @@ footer p {
 #about h3 {
     font-size: 1.75rem;
     margin-top: 1.5rem;
+    margin-bottom: 1rem;
 }
 
 #about p {
     font-size: 1rem;
     line-height: 1.6;
-    color: #666; /* Dark grey text color */
+    color: #666;
+}
+#about .row{
+    margin-top: 2rem;
 }
 
-#about .col-lg-6 {
-    margin-bottom: 1.5rem;
+@media (min-width: 992px) {
+    #about .col-md-6 {
+        margin-bottom: 1.5rem; /* Adjust or remove if Bootstrap’s default is sufficient */
+    }
 }
 
-#about .text-center {
-    margin-bottom: 2rem;
-}
 
+/*Services Page*/
 #services {
     background: #f9f9f9; /* Light grey background color */
 }
